--- a/ConsoleApp2/ConsoleApp2/ConsoleApp2.csproj
+++ b/ConsoleApp2/ConsoleApp2/ConsoleApp2.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>Tris</AssemblyName>
+    <RootNamespace>Tris</RootNamespace>
   </PropertyGroup>
 
 </Project>
