--- a/JeuQuinto/QuitoDLL/QuintoDLL.csproj
+++ b/JeuQuinto/QuitoDLL/QuintoDLL.csproj
@@ -1,11 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netstandard2.0</TargetFramework>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\DictionnaireDLL\DictionnaireDLL.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\DictionnaireDLL\DictionnaireDLL.csproj" />
+    </ItemGroup>
 
+    <ItemGroup>
+        <Reference Include="System.Windows.Forms">
+            <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.Windows.Forms.dll</HintPath>
+        </Reference>
+    </ItemGroup>
 </Project>
