--- a/JeuQuinto/JeuWinForms/Properties/Settings.settings
+++ b/JeuQuinto/JeuWinForms/Properties/Settings.settings
@@ -51,5 +51,8 @@
   &lt;string&gt;EN-en&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
+    <Setting Name="Paramètre" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
