--- a/ADO-SQL/BibliothequeNCouchesSQL/Bibliotheque.WinUI/App.config
+++ b/ADO-SQL/BibliothequeNCouchesSQL/Bibliotheque.WinUI/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Bibliotheque.WinUI.Properties.Settings.DB" connectionString="Data Source=localhost;Initial Catalog=Bibliotheque;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
