--- a/Javascript_API/ApiContacts/ApiContacts/appsettings.json
+++ b/Javascript_API/ApiContacts/ApiContacts/appsettings.json
@@ -1,13 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "ContactsDB": "Data Source=localhost;Initial Catalog=ContactsDB;User Id=sa;Password=Password!;"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ContactsDB": "Data Source=localhost;Initial Catalog=ContactsDB;Integrated Security=True"
-  }
 }
