--- a/Javascript_API/ApiContacts/ApiContacts/appsettings.json
+++ b/Javascript_API/ApiContacts/ApiContacts/appsettings.json
@@ -8,6 +8,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "ContactsDB": "Data Source=localhost;Initial Catalog=ContactsDB;User Id=sa;Password=Password!;"
+        "ContactsDB": "Data Source=localhost;Initial Catalog=ContactsDB;Integrated Security=True;"
     }
 }
