--- a/MVC/jeudontonestlehero/WebApplication/jeudontonestleheros.Web.UI.csproj
+++ b/MVC/jeudontonestlehero/WebApplication/jeudontonestleheros.Web.UI.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.319" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\jedontonestleheros.Core.Data\jedontonestleheros.Core.Data.csproj" />
+  </ItemGroup>
+
 </Project>
