--- a/MVC/jeudontonestlehero/WebApplication/appsettings.json
+++ b/MVC/jeudontonestlehero/WebApplication/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultContext": "Server=localhost,1433;Database=game_db;User Id=sa;Password=yourStrong(!)Password;"
     }
-  },
-  "AllowedHosts": "*"
 }
