--- a/MVC/jeudontonestlehero/WebApplication/jeudontonestleheros.Web.UI.csproj
+++ b/MVC/jeudontonestlehero/WebApplication/jeudontonestleheros.Web.UI.csproj
@@ -5,8 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.319" />
+    <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.327" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
   </ItemGroup>
 
   <ItemGroup>
